# tweeran

./: .flake8  LICENSE  README.md  main.py  pyproject.toml
tweeran/: __init__.py  analysis.py  cli.py  extraction.py  nlp.py
tweeran/analysis/: sentiment.py  stats.py
tweeran/extraction/: base.py  nlp.py  reddit.py  twitter.py
